--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
         "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled",
-    "livePreview.defaultPreviewPath": "/Esercizi Javascript/Registratore di cassa(IT).html"
+    "livePreview.defaultPreviewPath": "/Nana.protocol/Codice.html"
 }
